# main.go
@@ -84,7 +84,10 @@ func setupServer(address string, app *Application) {
 	r.HandleFunc("/api/submit", app.SubmitVideo).Methods("POST")
 	r.HandleFunc("/api/queue", app.GetQueue).Methods("GET")
 	r.HandleFunc("/api/history", app.GetHistory).Methods("GET")
+
+	// Metrics
 	r.HandleFunc("/api/logz", app.Log).Methods("GET")
+	r.HandleFunc("/api/stats", app.GetStats).Methods("GET")
 
 	// OAuth
 	r.HandleFunc("/login", OauthLoginHandler).Methods("GET")
